--- a/Vha.Net.csproj
+++ b/Vha.Net.csproj
@@ -87,6 +87,10 @@
     <Compile Include="Packets\UnknownPacket.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Starksoft.Net.Proxy\Starksoft.Net.Proxy.csproj">
+      <Project>{56EB350E-089E-40BB-97CB-F2745A4251AE}</Project>
+      <Name>Starksoft.Net.Proxy</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Vha.Common\Vha.Common.csproj">
       <Project>{711F8307-944C-4864-8D5E-0987C87E903A}</Project>
       <Name>Vha.Common</Name>
