API BREAKING CHANGE: - Renamed ChannelJoin to ChannelStatus to be more in line with other events. Even though the event implies joining a channel, it's not it's exclusive function and therefor was badly named.

--- a/Vha.Net.csproj
+++ b/Vha.Net.csproj
@@ -37,7 +37,7 @@
     <Compile Include="Enums.cs" />
     <Compile Include="Events\AmdMuxInfoEventArgs.cs" />
     <Compile Include="Events\AnonVicinityEventArgs.cs" />
-    <Compile Include="Events\ChannelJoinEventArgs.cs" />
+    <Compile Include="Events\ChannelStatusEventArgs.cs" />
     <Compile Include="Events\ChannelMessageEventArgs.cs" />
     <Compile Include="Events\CharacterIDEventArgs.cs" />
     <Compile Include="Events\DebugEventArgs.cs" />
@@ -71,7 +71,7 @@
     <Compile Include="Packets\EmptyPacket.cs" />
     <Compile Include="Delegates.cs" />
     <Compile Include="Packets\ForwardPacket.cs" />
-    <Compile Include="Packets\ChannelJoinPacket.cs" />
+    <Compile Include="Packets\ChannelStatusPacket.cs" />
     <Compile Include="Packets\ChannelMessagePacket.cs" />
     <Compile Include="LoginCharacter.cs" />
     <Compile Include="Packets\LoginCharacterListPacket.cs" />
