--- a/Vha.Net.csproj
+++ b/Vha.Net.csproj
@@ -32,6 +32,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
@@ -59,6 +61,8 @@
     <Compile Include="Events\UnknownPacketEventArgs.cs" />
     <Compile Include="Events\VicinityMessageEventArgs.cs" />
     <Compile Include="Friend.cs" />
+    <Compile Include="Packets\FriendAddPacket.cs" />
+    <Compile Include="Packets\FriendRemovePacket.cs" />
     <Compile Include="PrivateChannel.cs" />
     <Compile Include="Proxy.cs" />
     <Compile Include="Packets\AmdMuxInfoPacket.cs" />
