--- a/Vha.Net.csproj
+++ b/Vha.Net.csproj
@@ -117,7 +117,7 @@
     <Compile Include="Packets\UnknownPacket.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Starksoft.Net.Proxy\Starksoft.Net.Proxy.csproj">
+    <ProjectReference Include="..\Starksoft.Net.Proxy\Starksoft.Net.Proxy.csproj">
       <Project>{56EB350E-089E-40BB-97CB-F2745A4251AE}</Project>
       <Name>Starksoft.Net.Proxy</Name>
     </ProjectReference>
